--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <li><a href="index.html">商品一覧</a></li>
 <!-- <li><a href="menu.html">おすすめメニュー</a></li> -->
 <!-- <li><a href="access.html">お店へのアクセス</a></li> -->
-<li><a href="mailto:info@example.com">お問い合わせ</a></li>
+<li><a href="mailto:a.b.market.01@gmail.com">お問い合わせ</a></li>
 </ul>
 </div>
 
@@ -30,10 +30,20 @@
 
 <div id="content">
 <h2>商品一覧</h2>
-<h3>おいしいケーキでほっと一息</h3>
-<p><img src="img/img_cake.jpg" alt="">
-カフェロクナナのケーキは毎日手づくり。<br>
-季節ごとにいろんな味を楽しめます。</p>
+<h3>"野菜嫌いでも飲める"　ドクターベジフル青汁</h3>
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMCP0+C3TBLE+2YFY+ZU2WH" rel="nofollow">
+    <img class="img-01" border="0" width="350" height="auto" alt=""
+        src="https://www20.a8.net/svt/bgt?aid=200917188732&wid=001&eno=01&mid=s00000013795006019000&mc=1"></a>
+<img border="0" width="1" height="1" src="https://www10.a8.net/0.gif?a8mat=3BMCP0+C3TBLE+2YFY+ZU2WH" alt="">
+🔵【究極の青汁】<br>
+トリプル受賞達成の快挙！<br>
+★モンドセレクション<br>
+★青汁好きな人がおススメしたい青汁NO.1 <br>
+★人気雑誌「からだにいいこと」管理栄養士が選ぶ話題のサプリメント８選でNO.1<br><br>
+🔵内容量90g（3g×30包）<br>
+安心の九州産野菜を１００％使用！<br>
+人工甘味料・人工保存料不使用。<br>
+野菜は信頼のおける契約農家のものを厳選。</p>
 <h3>まるでリビングにいるような気分</h3>
 <p><img src="img/img_living.jpg" alt="">
 あかるい光が差し込む店内は、居心地バツグン。<br>
