--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="container">
         <div id="header" style="">
             <!-- <h1><a href="http://www.67-cafe.com/" target="_blank"><img src="img/logo.png" alt="cafe67"></a></h1> -->
-            <h1>青汁屋</h1>
+            <h1>厳選青汁屋</h1>
         </div>
 
 <div id="menu">
@@ -30,6 +30,9 @@
 
 <div id="content">
 <h2>商品一覧</h2>
+
+
+
 <h3>"野菜嫌いでも飲める"　ドクターベジフル青汁</h3>
 <p><a href="https://px.a8.net/svt/ejp?a8mat=3BMCP0+C3TBLE+2YFY+ZU2WH" rel="nofollow">
     <img class="img-01" border="0" width="350" height="auto" alt=""
@@ -44,12 +47,72 @@
 安心の九州産野菜を１００％使用！<br>
 人工甘味料・人工保存料不使用。<br>
 野菜は信頼のおける契約農家のものを厳選。</p>
-<h3>まるでリビングにいるような気分</h3>
-<p><img src="img/img_living.jpg" alt="">
-あかるい光が差し込む店内は、居心地バツグン。<br>
-じぶんの家にいるような気分でお過ごしください。</p>
+
+
+
+<h3>１５０億個の乳酸菌配合【やわた本青汁】</h3>
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDH7+E0VLRM+2EK4+2TAOV5" rel="nofollow">
+        <img border="0" width="330" height="auto" alt=""
+            src="https://www22.a8.net/svt/bgt?aid=200918203848&wid=001&eno=01&mid=s00000011218017014000&mc=1"></a>
+    <img border="0" width="1" height="1" src="https://www16.a8.net/0.gif?a8mat=3BMDH7+E0VLRM+2EK4+2TAOV5" alt="">
+    🔵偏った食生活が気になっている方にオススメ<br><br>
+    🔵お客様の購入動機としてお声を頂くのは以下の3つです。<br>
+    1. 1杯に150億個の乳酸菌！<br>
+    2. 安心の国産大麦若葉を使用<br>
+    3. 栄養機能食品であるビタミンCを1杯で30mg（ミカン約1個分）配合<br><br>
+    🔵約1ヶ月分2,160円（税込）。1杯あたり約72円。<br><br>
+    🔵自信があるから安心の全額返金保証つき！<br>
+</p>
+
+
+
+<h3>【美力青汁】 100％無添加＆カフェイン0</h3>
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDH9+EWFKTU+1PHM+NV1XD" rel="nofollow">
+    <img border="0" width="350" height="auto" alt=""
+        src="https://www29.a8.net/svt/bgt?aid=200918205901&wid=001&eno=01&mid=s00000007969004008000&mc=1"></a>
+<img border="0" width="1" height="1" src="https://www17.a8.net/0.gif?a8mat=3BMDH9+EWFKTU+1PHM+NV1XD" alt="">
+    🔵天然成分・栄養を濃縮した<br>「美力青汁」<br><br>
+    🔵ママとベビーの安心安全を第一に考え、100％無添加＆カフェイン0。<br><br>
+    そして飲みやすさにも徹底的にこだわり抜き、リニューアルした青汁。<br><br>
+    🔵ミッシーリスト代表の花澤が<br>
+    実際に妊娠・出産を経験し、<br>
+    「母親や生まれてくる子供にも優しい青汁」<br>
+    をコンセプトに誕生。<br><br>
+</p>
+
+
+
+<h3>モンドセレクション金賞受賞！「こどもフルーツ青汁」</h3>
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDHA+6BFLV6+15N6+15PMN5" rel="nofollow">
+    <img border="0" width="350" height="auto" alt=""
+        src="https://www24.a8.net/svt/bgt?aid=200918206382&wid=001&eno=01&mid=s00000005397007006000&mc=1"></a>
+<img border="0" width="1" height="1" src="https://www18.a8.net/0.gif?a8mat=3BMDHA+6BFLV6+15N6+15PMN5" alt="">
+    🔵こどもフルーツ青汁は、<br>
+    １日たったの50mlで野菜の栄養だけでなく、乳酸菌が140億個も取れる、ママにもお子様にも嬉しい青汁です。<br><br>
+    🔵NHK Eテレでの大人気アニメ『はなかっぱ』とのコラボレーションについて<br><br>
+    『はなかっぱ』という作品は、主人公『はなかっぱ』の成長がお子さまの成長に重ねていただきやすく、<br>
+    保護者の方がお子さまに身に付けて欲しい食育、生活習慣も楽しく伝えられています。<br><br>
+</p>
+
+
+
+<h3>＜明日葉（あしたば）青汁＞でスッキリからだをおそうじ</h3>
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDHA+AO0LYQ+20RG+1HMXW1" rel="nofollow">
+    <img border="0" width="160" height="auto"" alt=""
+        src="https://www27.a8.net/svt/bgt?aid=200918206645&wid=001&eno=01&mid=s00000009430009009000&mc=1"></a>
+<img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3BMDHA+AO0LYQ+20RG+1HMXW1" alt="">
+    🔵マイケアの『うれしい明日葉』は、<br>国産の明日葉・大麦若葉・桑の葉といった、栄養価の高い野菜と、日本人にうれしい植物性乳酸菌をたっぷり配合したこだわりの商品です。<br><br>
+    🔵野菜で食物繊維やミネラル、ビタミンがたっぷり摂れ、植物性乳酸菌で腸内バランスを整える、<br>
+    まさに日本人の腸内環境にピッタリ！<br><br>
+    また、合成添加物を使用していないので安心して毎日の生活に取り入れることができます。<br>
+    『うれしい明日葉』で、「スッキリ、どっさり」を実感してみてください。<br><br>
+</p>
+<br><br>
+
+
+
 <div id="footer">
-<p>Copyright © 2012 cafe67 All Rights Reserved.</p>
+<p>Copyright © 2020 aojiruya All Rights Reserved.</p>
 </div>
 </div>
 
