--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="author" content="cafe67">
-<meta name="description" content="cafe67のサイトです">
-<meta name="keywords" content="カフェ,原宿">
+<meta name="author" content="厳選青汁屋">
+<meta name="description" content="厳選青汁屋">
+<meta name="keywords" content="厳選,青汁">
 <meta name="viewport"
     content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>cafe67</title>
-<link rel="stylesheet" href="style.css" media="all">
+<link rel="stylesheet" href="index.css" media="all">
 </head>
 <body>
 <div id="container">
@@ -20,9 +20,9 @@
 <div id="menu">
 <ul>
 <li><a href="index.html">商品一覧</a></li>
-<!-- <li><a href="menu.html">おすすめメニュー</a></li> -->
+<li><a href="about.html">青汁とは？</a></li>
 <!-- <li><a href="access.html">お店へのアクセス</a></li> -->
-<li><a href="mailto:a.b.market.01@gmail.com">お問い合わせ</a></li>
+<!-- <li><a href="mailto:a.b.market.01@gmail.com">お問い合わせ</a></li> -->
 </ul>
 </div>
 
@@ -34,7 +34,7 @@
 
 
 <h3>"野菜嫌いでも飲める"　ドクターベジフル青汁</h3>
-<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMCP0+C3TBLE+2YFY+ZU2WH" rel="nofollow">
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMCP0+C3TBLE+2YFY+ZU2WH" target="_blank" rel="noopener noreferrer nofollow">
     <img class="img-01" border="0" width="350" height="auto" alt=""
         src="https://www20.a8.net/svt/bgt?aid=200917188732&wid=001&eno=01&mid=s00000013795006019000&mc=1"></a>
 <img border="0" width="1" height="1" src="https://www10.a8.net/0.gif?a8mat=3BMCP0+C3TBLE+2YFY+ZU2WH" alt="">
@@ -51,7 +51,7 @@
 
 
 <h3>１５０億個の乳酸菌配合【やわた本青汁】</h3>
-<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDH7+E0VLRM+2EK4+2TAOV5" rel="nofollow">
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDH7+E0VLRM+2EK4+2TAOV5" target="_blank" rel="noopener noreferrer nofollow">
         <img border="0" width="330" height="auto" alt=""
             src="https://www22.a8.net/svt/bgt?aid=200918203848&wid=001&eno=01&mid=s00000011218017014000&mc=1"></a>
     <img border="0" width="1" height="1" src="https://www16.a8.net/0.gif?a8mat=3BMDH7+E0VLRM+2EK4+2TAOV5" alt="">
@@ -67,7 +67,7 @@
 
 
 <h3>【美力青汁】 100％無添加＆カフェイン0</h3>
-<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDH9+EWFKTU+1PHM+NV1XD" rel="nofollow">
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDH9+EWFKTU+1PHM+NV1XD" target="_blank" rel="noopener noreferrer nofollow">
     <img border="0" width="350" height="auto" alt=""
         src="https://www29.a8.net/svt/bgt?aid=200918205901&wid=001&eno=01&mid=s00000007969004008000&mc=1"></a>
 <img border="0" width="1" height="1" src="https://www17.a8.net/0.gif?a8mat=3BMDH9+EWFKTU+1PHM+NV1XD" alt="">
@@ -83,7 +83,7 @@
 
 
 <h3>モンドセレクション金賞受賞！「こどもフルーツ青汁」</h3>
-<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDHA+6BFLV6+15N6+15PMN5" rel="nofollow">
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDHA+6BFLV6+15N6+15PMN5" target="_blank" rel="noopener noreferrer nofollow">
     <img border="0" width="350" height="auto" alt=""
         src="https://www24.a8.net/svt/bgt?aid=200918206382&wid=001&eno=01&mid=s00000005397007006000&mc=1"></a>
 <img border="0" width="1" height="1" src="https://www18.a8.net/0.gif?a8mat=3BMDHA+6BFLV6+15N6+15PMN5" alt="">
@@ -97,7 +97,7 @@
 
 
 <h3>＜明日葉（あしたば）青汁＞でスッキリからだをおそうじ</h3>
-<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDHA+AO0LYQ+20RG+1HMXW1" rel="nofollow">
+<p><a href="https://px.a8.net/svt/ejp?a8mat=3BMDHA+AO0LYQ+20RG+1HMXW1" target="_blank" rel="noopener noreferrer nofollow">
     <img border="0" width="160" height="auto"" alt=""
         src="https://www27.a8.net/svt/bgt?aid=200918206645&wid=001&eno=01&mid=s00000009430009009000&mc=1"></a>
 <img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3BMDHA+AO0LYQ+20RG+1HMXW1" alt="">
@@ -107,7 +107,7 @@
     また、合成添加物を使用していないので安心して毎日の生活に取り入れることができます。<br>
     『うれしい明日葉』で、「スッキリ、どっさり」を実感してみてください。<br><br>
 </p>
-<br><br>
+<br><br><br><br><br><br>
 
 
 
