--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
 
 
 <div id="footer">
-    <p>Copyright © 2020 aojiruya All Rights Reserved.</p>
+    <p>Copyright © 2020 gensen-aojiruya All Rights Reserved.</p>
 </div>
 </div>
 
