--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 
-<h3>"野菜嫌いでも飲める"　ドクターベジフル青汁</h3>
+<!-- <h3>"野菜嫌いでも飲める"　ドクターベジフル青汁</h3>
 <p><a href="https://px.a8.net/svt/ejp?a8mat=3BMCP0+C3TBLE+2YFY+ZU2WH" target="_blank" rel="noopener noreferrer nofollow">
     <img class="img-01" border="0" width="350" height="auto" alt=""
         src="https://www20.a8.net/svt/bgt?aid=200917188732&wid=001&eno=01&mid=s00000013795006019000&mc=1"></a>
@@ -46,7 +46,7 @@
 🔵内容量90g（3g×30包）<br>
 安心の九州産野菜を１００％使用！<br>
 人工甘味料・人工保存料不使用。<br>
-野菜は信頼のおける契約農家のものを厳選。</p>
+野菜は信頼のおける契約農家のものを厳選。</p> -->
 
 
 
